--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
 .top-img {
   width: 100%;
   height: 36%;
-  background-image: url(/images/illustration-hero.svg);
+  background-image: url("images/illustration-hero.svg");
   background-position: center center;
   background-size: cover;
   border-radius: 1rem 1rem 0 0;
