--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
   width: 100%;
   height: 900px;
   background-color: var(--pale-blue-bg);
-  background-image: url(/images/pattern-background-desktop.svg);
+  background-image: url("images/pattern-background-desktop.svg");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: top center;
