--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,7 @@ body {
   background-color: var(--card-bg);
 }
 
-.top-img {
-  width: 100%;
-  height: 36%;
-  background-image: url("images/illustration-hero.svg");
-  background-position: center center;
-  background-size: cover;
+.top-img img {
   border-radius: 1rem 1rem 0 0;
 }
 
