--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,8 @@ body {
   margin: 0 auto;
   font-size: 1rem;
   font-weight: 700;
+  background-color: transparent;
+  border: none;
   color: var(--desaturated-blue);
   cursor: pointer;
   transition: all 0.2ms ease-in;
